--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     	<meta charset="utf-8">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
-
-		<title>Title in the tab</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>My bar</title>
 
 		<!-- external CSS link -->
 		
