add minor tweaks

--- a/index.html
+++ b/index.html
@@ -21,15 +21,10 @@
 			<span style="--i:3">i</span>
 			<span style="--i:4">n</span>
 			<span style="--i:5">k</span>
-			<span style="--i:6"></span>
-			<span style="--i:7">p</span>
-			<span style="--i:8">l</span>
-			<span style="--i:9">s</span>
-			<span style="--i:10">?</span>
-		 
+			<span style="--i:6">?</span>	 
 		   </div>
 		
-		<input type="text" name="" value="">
+		<div class="input-field"><input type="text" name="" value=""></div>
 		<button type="button" name="button" class="get-button">Get Cocktail</button>
 
 		<button type="button" class="next-button">Next</button>
